worked around the white space issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 html {
 	font-family: "Lato";
 	font-size: 16px;
+	overflow-x: hidden;
 }
 html,
 body {
